<resources>
    <string name="app_name">WateringSystem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="current_water_soil">Current water soil:</string>
    <string name="the_next_scheduled_watering_will_be_on">The next scheduled watering will be on:</string>
    <string name="water_now">Water now!</string>
    <string name="hint_word">Measured water soil...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="pref_basicBehaviour">Basic watering behaviour</string>
    <string name="pref_basicBehaviour_dialog_title">Start watering depending on</string>
    <string name="pref_basicBehaviour_default_value">Minimal water moisture</string>

    <string-array name="pref_basicBehaviour_entries">
        <item>Minimal water moisture</item>
        <item>Scheduled days</item>
    </string-array>

    <string-array name="pref_basicBehaviour_values">
        <item>Minimal water moisture</item>
        <item>Scheduled days</item>
    </string-array>

    <string name="pref_minimalMoisture">Minimal moisture</string>
    <string name="pref_minimalMoisture_dialog_title">Start watering when</string>
    <string name="pref_minimalMoisture_default_value">Moisture under 40%</string>

    <string-array name="pref_minimalMoisture_entries">
        <item>Moisture under 40%</item>
        <item>Moisture under 50%</item>
        <item>Moisture under 60%</item>
    </string-array>

    <string-array name="pref_minimalMoisture_values">
        <item>Moisture under 40%</item>
        <item>Moisture under 50%</item>
        <item>Moisture under 60%</item>
    </string-array>

    <string name="pref_scheduled_days">Watering days</string>
    <string name="pref_scheduled_days_dialog_title">Water on</string>

    <string-array name="pref_scheduled_days_entries">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="pref_scheduled_days_values">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>
